--- a/index.html
+++ b/index.html
@@ -62,18 +62,46 @@
         <h2 class="text-3xl font-semibold text-center mb-6">Projects</h2>
         <p class="text-lg text-gray-600 text-center mb-6">Here are some of the major projects I’ve worked on:</p>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+
+          <!-- Project 1: UIDAI eKYC Integration -->
           <div class="bg-white shadow-lg rounded-lg p-6">
-            <h3 class="text-xl font-semibold text-blue-600">UIDAI API Integration for eKYC</h3>
-            <p class="text-gray-600 mt-2">Worked on integrating UIDAI’s eKYC service into a banking platform, improving customer verification processes with enhanced security and efficiency.</p>
+            <h3 class="text-xl font-bold text-blue-600">UIDAI eKYC Integration</h3>
+            <p class="text-gray-600 mt-2">
+              Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication.
+              Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.
+            </p>
+            <p class="mt-1 font-medium">Outcome:</p>
+            <p class="text-gray-600">
+              Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.
+            </p>
           </div>
+
+          <!-- Project 2: Decommissioning Legacy LOS -->
           <div class="bg-white shadow-lg rounded-lg p-6">
-            <h3 class="text-xl font-semibold text-blue-600">Digital Banking Platform Overhaul</h3>
-            <p class="text-gray-600 mt-2">Led the redesign of a banking platform’s user interface, ensuring that it was mobile-friendly, user-centric, and accessible to all customers.</p>
+            <h3 class="text-xl font-bold text-blue-600">Decommissioning Legacy LOS</h3>
+            <p class="text-gray-600 mt-2">
+              Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. 
+              Created data flows, screens, and a new BRE to handle complex loan logic.
+            </p>
+            <p class="mt-1 font-medium">Outcome:</p>
+            <p class="text-gray-600">
+              Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.
+            </p>
           </div>
+
+          <!-- Project 3: Managing Government Business -->
           <div class="bg-white shadow-lg rounded-lg p-6">
-            <h3 class="text-xl font-semibold text-blue-600">Mobile App for Personal Finance Management</h3>
-            <p class="text-gray-600 mt-2">Spearheaded the development of a personal finance management app aimed at improving financial literacy and enabling better financial decisions for users.</p>
+            <h3 class="text-xl font-bold text-blue-600">Managing Government Business</h3>
+            <p class="text-gray-600 mt-2">
+              Led internal systems to support government lending programs like NRLM, NULM, and SHG. 
+              Improved PSL tracking and SMF categorization.
+            </p>
+            <p class="mt-1 font-medium">Outcome:</p>
+            <p class="text-gray-600">
+              Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.
+            </p>
           </div>
+
         </div>
       </section>
 
