--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <section id="contact" class="mb-20">
         <h2 class="text-3xl font-semibold mb-4">Contact</h2>
         <p class="text-lg">Email: <a href="mailto:ceofrontlane@gmail.com" class="text-blue-600">ceofrontlane@gmail.com</a></p>
-        <p class="text-lg mt-2">LinkedIn: <a href="https://www.linkedin.com/in/sachingupta" class="text-blue-600" target="_blank">linkedin.com/in/sachingupta</a></p>
+        <p class="text-lg mt-2">LinkedIn: <a href="https://www.linkedin.com/in/sachingupta" class="text-blue-600" target="_blank">linkedin.com/in/sachinguptanxt</a></p>
       </section>
 
       <!-- Resume Section -->
