--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section id="about" class="mb-20">
         <h2 class="text-3xl font-semibold mb-4">About Me</h2>
         <p class="text-lg">
-          Product professional with experience leading digital transformation in banking, integrating eKYC, managing government initiatives, and improving customer onboarding flows.
+          Product professional with experience leading digital transformation in Banking, Integrating APIs, managing government initiatives, Building Business required documents and improving customer onboarding flows.
         </p>
       </section>
 
