--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
               Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.
             </p>
           </div>
+
+          <div class="project-box" data-aos="fade-up" data-aos-delay="300">
+            <h3 class="text-xl font-bold mb-2">Redesigned eKYC Flow for B2B2C Lending App</h3>
+            <p>
+              Improved conversion by streamlining PAN and Aadhaar KYC authentication. Led research, restructured APIs, enabled OCR verification, and implemented custom error handling.
+            </p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>
+              Reduced drop-offs and enabled B2C customers to complete onboarding in 20 minutes.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -148,7 +159,7 @@
       <section id="contact" class="mb-20">
         <h2 class="text-3xl font-semibold mb-4">Contact</h2>
         <p class="text-lg">Email: <a href="mailto:ceofrontlane@gmail.com" class="text-blue-400 hover:underline">ceofrontlane@gmail.com</a></p>
-        <p class="text-lg mt-2">LinkedIn: <a href="https://www.linkedin.com/in/sachingupta" class="text-blue-400 hover:underline" target="_blank">linkedin.com/in/sachingupta</a></p>
+        <p class="text-lg mt-2">LinkedIn: <a href="https://www.linkedin.com/in/sachingupta" class="text-blue-400 hover:underline" target="_blank">linkedin.com/in/sachinguptanxt</a></p>
       </section>
 
       <!-- Resume Section -->
